Add JavaDocs and docs